[package]
name = "rocket-recaptcha-v3"
version = "0.3.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/rocket-recaptcha-v3"
homepage = "https://magiclen.org/rocket-recaptcha-v3"
keywords = ["rocket", "reCAPTCHA", "google", "captcha"]
categories = ["web-programming"]
description = "This crate can help you use reCAPTCHA v3 (v2 is backward compatible) in your Rocket web application."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.1"
once_cell = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

rocket-client-addr = "0.5"

[dependencies.validators]
version = "0.24"
default-features = false
features = ["derive", "rocket", "base64_url", "regex"]

[dev-dependencies]
rocket-include-tera = "0.5"